fix: ensure deterministic pagination order